<resources>
    <string name="app_name">IDear</string>

    <!-- 메인 페이지 메뉴 -->
    <string name="menu_my_page">마이페이지</string>
    <string name="menu_bookmark">즐겨찾기 목록</string>
    <string name="menu_setting">환경설정</string>
    <string name="menu_logout">로그아웃</string>

    <!-- 마이 페이지 -->
    <string name="my_page_label">프로필</string>
    <string name="edit_profile">수정하기</string>
    <string name="add_profile">프로필 추가하기</string>
    <string name="add_profile_label">프로필 추가</string>
    <string name="edit_profile_label">프로필 수정</string>
    <string name="select_mood_keyword_label">분위기 카테고리</string>
    <string name="select_mood_keyword_notice">프로필이 가지는 나만의 분위기를 골라보세요.</string>
    <string name="select_formal_label">높임말 선택하기</string>
    <string name="select_formal_notice">내 프로필은 친근한 반말인가요? 공손한 존댓말인가요?</string>
    <string name="select_formal_top">존댓말</string>
    <string name="select_formal_low">반말</string>
    <string name="select_mbti_label">MBTI 설정하기</string>
    <string name="select_mbti_notice">나의 가상 프로필 MBTI를 지정해보세요.</string>
    <string name="add_profile_done">추가하기</string>
    <string name="edit_profile_done">수정 완료</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="test">생일 축하해! 이 특별한 날을 기념하여 마음 가득한 축하의 말을 전하고 싶어요. 너의 생일은 항상 특별한 순간이야. 너의 유쾌한 에너지와 친절한 마음으로 언제나 우리 주위를 밝게 만들어줘서 감사해요.
너와 함께 보낸 모든 순간은 소중한 추억으로 남을 거야. 너의 웃음 소리와 함께 한 이야기들은 언제나 나에게 힘이 되어줬어. 그래서 이번 생일은 너에게 최고의 행복과 성공을 빌어주고 싶어요.
새로운 한 해가 너에게 뜻깊은 순간들을 안겨줄 거라 믿어요. 너의 꿈과 목표를 이루고 많은 성취를 이루길 바래요. 어떤 어려움이 있더라도 넌 강하고 용기있는 사람이니까 분명히 극복할 수 있을 거야.
생일 축하해, 내 친구! 너와 함께한 모든 순간은 나에게 큰 행운이야. 오늘은 너만을 위한 특별한 날, 너의 웃음과 행복이 끊이지 않기를 바라며, 너의 풍요로운 미래에 건배해요!</string>
</resources>