<?xml version="1.0" encoding="utf-8"?>
<!-- 프로필 추가 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mypage.AddProfileActivity"
    android:background="@color/white">

    <!-- 상단 메뉴 -->
    <RelativeLayout
        android:id="@+id/relative_add_profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <!-- 이전 버튼 -->
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginLeft="16dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_back_arrow"
            android:background="@color/translate"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <!-- 페이지 명 -->
        <TextView
            android:id="@+id/text_add_profile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_profile_label"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <!-- 분위기 카테고리 선택 -->
    <LinearLayout
        android:id="@+id/linear_select_mood_keyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        android:layout_below="@id/relative_add_profile_header">

        <!-- 분위기 카테고리 -->
        <TextView
            android:id="@+id/text_select_mood_keyword_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_mood_keyword_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/text_select_mood_keyword_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/select_mood_keyword_notice"
            android:textColor="@color/more_info"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_mood_keyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/item_mood_keyword_profile"/>

    </LinearLayout>

    <View
        android:id="@+id/line_mood_keyword"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="27dp"
        android:layout_below="@id/linear_select_mood_keyword"
        android:background="@color/profile_gray"/>

    <!-- 높임말 선택 -->
    <LinearLayout
        android:id="@+id/linear_select_formal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        android:layout_below="@id/line_mood_keyword">

        <!-- 분위기 카테고리 -->
        <TextView
            android:id="@+id/text_select_formal_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_formal_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/text_select_formal_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/select_formal_notice"
            android:textColor="@color/more_info"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <LinearLayout
                android:id="@+id/linear_formal_top"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:paddingVertical="12dp"
                android:background="@drawable/shape_unselect_formal"
                android:gravity="center">

                <TextView
                    android:id="@+id/text_formal_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_formal_top"
                    android:textSize="14sp"
                    android:textColor="@color/idear_gray_800"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_formal_low"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="6dp"
                android:paddingVertical="12dp"
                android:background="@drawable/shape_unselect_formal"
                android:gravity="center">

                <TextView
                    android:id="@+id/text_formal_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_formal_low"
                    android:textSize="14sp"
                    android:textColor="@color/idear_gray_800"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/line_formal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="27dp"
        android:layout_below="@id/linear_select_formal"
        android:background="@color/profile_gray"/>

    <!-- MBTI 선택 -->
    <LinearLayout
        android:id="@+id/linear_select_mbti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        android:layout_below="@id/line_formal">

        <!-- mbti -->
        <TextView
            android:id="@+id/text_select_mbti_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_mbti_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/text_select_mbti_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/select_mbti_notice"
            android:textColor="@color/more_info"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <!-- mbti 선택 토글 -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_toggle_mbti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_toggle_mbti"
            android:layout_below="@id/linear_profile_label"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_add_profile_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:paddingVertical="10dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="15dp"
        android:text="@string/add_profile_done"
        android:textColor="@color/idear_gray_500"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/idear_gray_200"
        android:stateListAnimator="@null"/>

</RelativeLayout>