<?xml version="1.0" encoding="utf-8"?>
<!-- 메인 페이지 > 메뉴 탭 -->
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_drawer_layout"
    tools:openDrawer="end"
    android:fitsSystemWindows="true">

    <!--
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="16dp"
        >
-->
    <!-- 메인 페이지 -->
    <include
        android:id="@+id/include_main_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/activity_main"/>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:orientation="vertical"
        android:background="@drawable/shape_menu_radius"
        app:itemTextColor="@color/black"
        android:layout_gravity="end"
        android:layout_width="260dp"
        android:layout_height="match_parent">

        <!-- 메뉴 목록 -->
        <LinearLayout
            android:id="@+id/linear_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="84dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_idear_logo"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/idear_gray_200" />

            <!-- 마이 페이지 -->
            <RelativeLayout
                android:id="@+id/btn_menu_mypage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_menu_mypage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginVertical="16dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/menu_my_page"
                    android:textColor="@color/idear_gray_800"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="14dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:tint="@color/idear_green"
                    android:src="@drawable/ic_open_arrow_right" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/idear_gray_200" />

            <!-- 즐겨찾기 목록 -->
            <RelativeLayout
                android:id="@+id/btn_menu_bookmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_menu_bookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginVertical="16dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/menu_bookmark"
                    android:textColor="@color/idear_gray_800"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="14dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:tint="@color/idear_green"
                    android:src="@drawable/ic_open_arrow_right" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/idear_gray_200" />

            <!-- 환경 설정 -->
            <RelativeLayout
                android:id="@+id/btn_menu_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_menu_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginVertical="16dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/menu_setting"
                    android:textColor="@color/idear_gray_800"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="14dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:tint="@color/idear_green"
                    android:src="@drawable/ic_open_arrow_right" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/idear_gray_200" />

            <!-- 로그인/로그아웃 -->
            <RelativeLayout
                android:id="@+id/btn_menu_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="34dp"
                android:background="@drawable/shape_logout_btn"
                android:gravity="center">

                <TextView
                    android:id="@+id/text_menu_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="@string/menu_logout"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>


    </com.google.android.material.navigation.NavigationView>
    <!--
    </androidx.cardview.widget.CardView>
    -->

</androidx.drawerlayout.widget.DrawerLayout>